Fix contraste color analyzer AA

--- a/style.css
+++ b/style.css
@@ -783,12 +783,12 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #333333!important; /*changement de couleur pour passé le AA en gardant la charte couleur */
 }
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #000!important; /* ajout black pour contraste */
+    color: #333333!important; /*changement de couleur pour passé le AA en gardant la charte couleur */
 }
 
 .btn-atomic-tangerine:hover {
